--- a/app/src/main/res/layout/fragment_chat_buy.xml
+++ b/app/src/main/res/layout/fragment_chat_buy.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ChatBuyFragment">
 
     <androidx.recyclerview.widget.RecyclerView
@@ -10,7 +11,8 @@
         android:layout_height="match_parent"
         android:id="@+id/chat_recycler"
 
+        android:layout_below="@id/toolbar"
 
         />
 
-</FrameLayout>
+</RelativeLayout>
