--- a/app/src/main/res/layout/activity_upload.xml
+++ b/app/src/main/res/layout/activity_upload.xml
@@ -390,7 +390,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:minHeight="48dp"
-                        android:text="Biography / Auto-Biography"
+                        android:text="Biography"
                         android:textSize="16sp"/>
 
                     <RadioButton
@@ -399,6 +399,14 @@
                         android:layout_height="wrap_content"
                         android:minHeight="48dp"
                         android:text="Fiction"
+                        android:textSize="16sp"/>
+
+                    <RadioButton
+                        android:id="@+id/JournalCategoryRadioButton"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:minHeight="48dp"
+                        android:text="Journal"
                         android:textSize="16sp"/>
 
                 </RadioGroup>
@@ -427,7 +435,10 @@
                     android:layout_width="300dp"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/tV_otherCategory"
-                    android:layout_margin="10dp"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginBottom="10dp"
                     android:background="@android:color/transparent"
                     android:hint="Please specify category if not mentioned above"
                     android:inputType="text"
@@ -704,7 +715,20 @@
                     android:layout_height="wrap_content"
                     android:text="Select\nImage"
                     android:backgroundTint="@color/light_blue"
-                    android:layout_centerHorizontal="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginStart="40dp"
+                    android:layout_below="@id/arrow_left"
+                    android:layout_marginTop="20dp"
+                    />
+
+                <Button
+                    android:id="@+id/btnClearImage"
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:text="Clear\nImage"
+                    android:backgroundTint="@color/light_blue"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginEnd="40dp"
                     android:layout_below="@id/arrow_left"
                     android:layout_marginTop="20dp"
                     />
