--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -4,16 +4,20 @@
         android:id="@+id/nav_btn_home"
         android:title="Home"
         android:icon="@drawable/home_icon" />
-
     <item
-        android:id="@+id/nav_btn_chats"
-        android:title="Chats"
-        android:icon="@drawable/chat_icon" />
+        android:id="@+id/nav_btn_search"
+        android:title="Search"
+        android:icon="@drawable/search_24" />
 
     <item
         android:id="@+id/nav_btn_my_ads"
         android:title="My Ads"
         android:icon="@drawable/my_ads_icon" />
+
+    <item
+        android:id="@+id/nav_btn_chats"
+        android:title="Chats"
+        android:icon="@drawable/chat_icon" />
 
     <item
         android:id="@+id/nav_btn_profile"
