--- a/app/src/main/res/drawable/right_arrow_icon.xml
+++ b/app/src/main/res/drawable/right_arrow_icon.xml
@@ -4,6 +4,6 @@
     android:width="24dp"
     android:viewportHeight="24"
     android:viewportWidth="24">
-    <path android:fillColor="@android:color/white"
+    <path android:fillColor="@android:color/black"
         android:pathData="M8.59,16.59L13.17,12 8.59,7.41 10,6l6,6 -6,6 -1.41,-1.41z"/>
 </vector>
