settings+profile+frontUpdate

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -16,8 +16,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
-            android:background="#38CDCC"
+            android:background="@color/primary"
             app:menu="@menu/navigation_menu"
             app:showAsAction="always"/>
 
